Fixed JSONFileimporter and Exporter to account for dealername, dealeracquisitionstatus, and vehicle rent status. It was Abdi's work but he couldn't push it. Also the import and export cancelled messages work now and don't show when import and export are successfull.